# flow

./: .gitignore  .prettierignore  .prettierrc.mjs  AGENTS.md  GAMEPLAN.md  ORPHANS_DEAD.md  README.md  eslint.config.mjs  next.config.ts  package.json  prisma.config.ts  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
electron/: main.cjs  preload.cjs  webview-preload.cjs
hooks/: use-settings.ts
lib/: file-operations.ts  markdown-converter.ts  mcp-client.ts  port-manager.ts  ports.ts  project-analyzer.ts  settings-store.ts
prisma/: check-configs.ts  check-wac-team.ts  count-backgrounds.ts  final-validation.ts  fix-all-component-docs.ts  list-all-configs.ts  schema.prisma  seed-agents-md.ts  seed-agents.ts  seed-all-backgrounds.ts  seed-all-config-types.ts  seed-all-missing-components.ts  seed-best-practice-configs.ts  seed-best-practices-additional.ts  seed-best-practices.ts  seed-components.ts  seed-comprehensive-configs.ts  seed-core-configs.ts  seed-features.ts  seed-hero-backgrounds.ts  seed-missing-app-types.ts  seed-more-backgrounds.ts  seed-new-backgrounds.ts  seed-shared-configs.ts  seed-skills-additional.ts  seed-skills-final.ts  seed-skills-more.ts  seed-skills-nextjs.ts  seed-skills.ts  seed-teams.ts  seed-wac-team.ts  seed-workflows.ts  seed.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/shims/: electron-compat.js
src-tauri/src/: application_commands.rs  lib.rs  main.rs  port_commands.rs  project_commands.rs  shell_commands.rs  studio_commands.rs  window_commands.rs
(+589 files in other folders)
