[package]
name = "flow-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "SummonIQ Flow Desktop (Tauri)"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
regex = "1"
dirs = "6"
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "flow_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
